--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -16,9 +16,9 @@
             <label >Full name</label>
             <input type="text" required name="name"/>
             <label >Email</label>
-            <input type="text" required name="name"/>
+            <input type="text" required name="email"/>
             <label >Password</label>
-            <input type="text" required name="name"/>
+            <input type="text" required name="password"/>
             <button type="submit">Signup</button>
         </form>
 </body>
